# gfx-boilerplate

./: CMakeLists.txt  fileio.hpp  gl_prim.cpp  gl_prim.hpp  gl_shader.cpp  gl_shader.hpp  gl_text.cpp  gl_text.hpp  gl_texture.cpp  gl_texture.hpp  ignorelist.txt  image.cpp  image.hpp  main.cpp  prim.cpp  shader.cpp  shader.hpp  text.cpp  text.hpp  utf8_decode.hpp
shaders/: circle.frag  quad.frag  quad.vert  roundrect.frag  text.vert
